applicationsets/git-dir-generator/apps/pricelist-frontend/pricelist-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: le-cluster-issuer
    external-dns.alpha.kubernetes.io/ttl: "60"
  name: pricelist-ingress
  namespace: pricelist
spec:
  ingressClassName: nginx
  rules:
    - host: appsets.tachi.soramitsu.co.jp
      http:
        paths:
          - backend:
              service:
                name: pricelist
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - appsets.tachi.soramitsu.co.jp
      secretName: appsets-tls
